--- a/paralax.html
+++ b/paralax.html
@@ -136,7 +136,7 @@
                 }
 
                 .background{
-                    position:static;
+                    position:absolute;
                 }
 
                 section{
