--- a/paralax.html
+++ b/paralax.html
@@ -143,6 +143,7 @@
                 height:auto;
                 margin-right:0px;
                 margin-left:0px;
+                background-color:rgb(232, 255, 193);
                 }
                 
                 #yellow_paragraph{
